--- a/src/pages/Survey/conversion/conversionU.module.scss
+++ b/src/pages/Survey/conversion/conversionU.module.scss
@@ -4,7 +4,7 @@ html, body{
   overflow-y: scroll;
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 200vh;
 }
 .top_right_logo{
   position: absolute;
@@ -19,24 +19,143 @@ html, body{
 
 .center_image{
   position: relative; /* Add this to make left work */
-  left: 10%;
-  width: 70%;
-  top: 5%;
-  height: auto;
+  left: 4%;
+  width: 50%;
+  margin-top: 50px;
+  height: 200px;
+  img {
+    max-width: 70%;
+    max-height: 70%;
+  }
   }
   .center_text{
     color: white;
     position: absolute;
-    top: 40%;
-    left: 6%;
+    top: 14%;
+    left: 12%;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: xx-large;
-    line-height: 0.5em;
+    line-height: 1.5em;
     z-index: 1; /* Ensure the welcome text is above other elements */
 
   }
+#midright_text{
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  line-height: 0.7em;
+}
+.left_selection{
+ position: absolute;
+ background: url('/images/leftback.png') no-repeat center center;
+ background-size: cover;
+ top: 40%;
+ left: 3%;
+ height: 60%;
+ width: 45%;
+ border: 0.1px solid grey;
+ border-radius: 17px;
 
+
+  table {
+    position: relative;
+    border-collapse: collapse;
+    width: 93%;
+    tr {
+      &:nth-child(even) {
+        background-color: rgba(108, 108, 108, 0.459); /* See-through grey background for even rows */
+        
+      }
+
+      td {
+        padding: 3px; 
+        border-radius: 5px;          
+      }
+    }
+  }
+  p, table, button{
+    margin: 20px 20px 20px 20px;
+    line-height: 18px;
+  }
+
+ button{
+  cursor: pointer;
+  outline: none;
+  border-radius: 20px;
+  width: 40%;
+  padding: 10px; 
+  font-size: small;
+ 
+  &:not(:focus) {
+    background-color: rgba(255, 98, 0, 0.868);
+    color: white;
+  }
+
+  &:focus {
+    background-color: white;
+    color: black;
+ }
+ }
+ 
+}
+
+.right_selection{
+  position: absolute;
+ background: url('/images/rightback.png') no-repeat center center;
+ background-size: cover;
+ top: 40%;
+ right: 3%;
+ height: 60%;
+ width: 45%;
+ border: 0.1px solid grey;
+ border-radius: 17px;
+
+
+  table {
+    position: relative;
+    border-collapse: collapse;
+    width: 93%;
+    tr {
+      &:nth-child(even) {
+        background-color: rgba(108, 108, 108, 0.459); /* See-through grey background for even rows */
+        
+      }
+
+      td {
+        padding: 3px; 
+        border-radius: 5px;          
+      }
+    }
+  }
+  p, table, button{
+    margin: 20px 20px 13px 20px;
+    line-height: 18px;
+  }
+
+ button{
+  cursor: pointer;
+  border-radius: 20px;
+  width: 40%;
+  padding: 10px; 
+  font-size: small;
+  
+ 
+  &:not(:focus) {
+     background: linear-gradient(to right, #0735ce, #1abc9c); /* Set your color values */
+    color: white;
+    outline: none;
+  }
+
+  &:focus {
+    background: linear-gradient(to right, #1abc9c, #0735ce);  /* Reverse the colors on hover */
+    color: white;
+    outline: none;
+ }
+ }
+ 
+  
+}
     @media screen and (min-width: 1300px) {
       body {
         margin-bottom: 21.5%;
