--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,10 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: black;
+  margin: 0;
+  padding: 0;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,12 +27,12 @@ a:hover {
 body {
   margin: 0;
   /* display: flex; */
-
+padding: 0;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
   height: 100%;
-  overflow-y: hidden;
+  overflow-y: scroll;
 }
 
 h1 {
