--- a/src/pages/Survey/conversion/conversionU.module.scss
+++ b/src/pages/Survey/conversion/conversionU.module.scss
@@ -37,10 +37,9 @@
     position: relative;
     top: 1em;
     left:2em;
-    font-size: xx-large;
-    font-weight: 900;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1em;
+    font-size:xx-large;
+    font-weight: 700;
+    line-height: 1.3em;
   }
   
  }
@@ -53,7 +52,11 @@
   max-width: 47%;
   border: 0.1px solid grey;
   border-radius: 17px;
-  p, table, button, span{
+  p{
+    margin: 15px 10px 15px 10px;
+    line-height: 1.5em;
+  }
+  table, button{
     margin: 10px 10px 10px 10px;
     line-height: 1.5em;
   }
@@ -104,7 +107,11 @@
   max-width: 47%;
   border: 0.1px solid grey;
   border-radius: 17px;
-  p, table, button, span{
+  p{
+    margin: 15px 10px 15px 10px;
+    line-height: 1.5em;
+  }
+  table, button{
     margin: 10px 10px 10px 10px;
     line-height: 1.5em;
   }
@@ -300,7 +307,7 @@ top: 60em;
     right: 1em;
    }
    .footer{
-    top: 104em;
+    top: 107em;
     left: 50%;
     transform: translate(-50%, -50%);
     bottom: 0;
