--- a/src/pages/Survey/conversion/conversion.module.scss
+++ b/src/pages/Survey/conversion/conversion.module.scss
@@ -13,7 +13,7 @@
   margin-bottom: 10px;
  }
  .top_right_logo{
-  position: fixed;
+  position: absolute;
   right: 1em;
   z-index: 1;
  }
@@ -29,7 +29,7 @@
   max-width: 30em;
   top: 2em;
   img{
-    position: fixed;
+    position: inherit;
     max-width: 50em;
     max-height: 45em;
   }
