--- a/src/pages/Survey/Club/club.module.scss
+++ b/src/pages/Survey/Club/club.module.scss
@@ -1,13 +1,13 @@
 .background_container {
     display: flex;
     flex-direction: column;
-    background-image: url("/images/background.png");
+    background: url('/images/background.png') no-repeat center center;
     background-size: cover;
     color: white;
     min-height: 100vh;
     margin: 0;
-    padding: 0; 
-     
+    padding: 0;
+   
      
 }
 .top_left_text {
@@ -17,7 +17,7 @@
      
 }
 .top_right_logo {
-    position: absolute;
+    position: fixed;
     top: 0.2em;
     right: 0.2em;
     img{
@@ -30,7 +30,7 @@
     position: absolute;
     top: 10em;
     left: 13em;
-    max-width: 20em;
+    max-width: 30%;
     img{
         max-width: 10em;
         max-height: 10em;
@@ -61,7 +61,7 @@ span{
     right: 20em;
     background: white;
     border-radius: 15px;
-    max-width: 18em;
+    max-width: 30%;
     height:23em; 
     color: black;   
  }
@@ -72,7 +72,7 @@ span{
     top: 2em;
     left: 1em;
     font-weight: 600;
-    max-width: 16em; 
+    max-width: 80%; 
     font-size: small;
     padding: 0px 30px 0px 30px;
   
@@ -90,14 +90,13 @@ span{
     position: absolute;
     margin-top: 5em;
     padding: 0px 30px 0px 30px;
-    max-width: 18em;
+    max-width: 90%;
     
    button {
     background-color: white;
     color: black;
-    max-width: 20em;
-    text-align: left;
-    max-height: 7em;
+    text-align:right;
+    max-height: 20%;
     margin-top: 1em;
     outline: none;
     font-weight: 600;
@@ -110,7 +109,7 @@ span{
     img {
         max-width: 20px;
         max-height: 20px;
-        margin-right: 5px;
+        margin-right: 9px;
     }
     
 }
@@ -143,3 +142,29 @@ span{
     }
   }
 }
+ // RESPONSIVENESS //
+ @media screen and (width >1300px) {
+   }
+   @media screen and (width <1300px) {
+   
+   }
+   @media screen and (width <1000px) {
+    
+   
+  }
+  @media only screen and (width<700px) {
+     
+  }
+  @media only screen and (width< 400px) {
+   .background_container{
+    min-height:150vh;
+    min-width: 100%;
+
+   }
+   .top_left_text{
+    font-size: smaller;
+   }
+   .center_container{
+
+   }
+  }
